# iam-roles-anywhere-session

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: mkdocs-publish.yml  mkdocs-test.yml  python-publish-release-test.yml  python-publish-release.yml  python-test.yml
docs/: index.md  reference.md  usage.md
iam_rolesanywhere_session/: iam_rolesanywhere_session.py
src/iam_rolesanywhere_session/: __init__.py  iam_rolesanywhere_session.py
tests/: test_iam_rolesanywhere_session.py
